# ai-voice-agent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  server.py
agent/: __init__.py  graph.py  intent.py  llm.py  nodes.py  state.py  stt.py  tools.py
config/: __init__.py  logging_config.py  settings.py
ui/: app.js  index.html  recorder.js  style.css
