[project]
name = "ai-voice-agent"
version = "0.1.0"
description = "ARIA - Audio Reasoning Intelligence Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.40.0",
    "fastapi>=0.110.0",
    "groq>=0.9.0",
    "langchain>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=1.0.0",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.0",
    "scipy>=1.11.0",
    "uvicorn>=0.27.0",
]
